# eco-reporting

./: Makefile  README.md  pyproject.toml
ecoreporter/: contentevaluator.py  modelhandler.py  referencehandler.py
ecoreporter/prompts/: example_instruction_extractor_prompt.jinja  instruction_comparison_prompt.jinja  instruction_component_extractor_prompt.jinja  system_prompt.jinja
notebooks/: report_analysis.ipynb
resources/: E1-1_lawText.docx
